custom.css
/* ... */
.resize-text {
  /* For lists in kyb-local */
  font-size: 15px;
}

code.language-ruby,
code.language-python,
code.language-java {
  color: #fff;
}

code.language-php span,
code.language-ruby span {
  color: #fff;
}

#text {
  color: #fff;
}

.dark .card-header h2,
.dark .card-body p {
  color: #2d0f37;
}

/*  */
/* Lists */
/*  */

.prose :where(ol > li):not(:where([class~="not-prose"] *))::marker {
  color: inherit;
}

/*  */
/* Block Quote */
/*  */

.prose :where(blockquote):not(:where([class~="not-prose"] *)) {
  border-color: #2d0f37;
  color: #2d0f37;
}

:is(.dark .prose blockquote) {
  border-color: white;
  color: white;
}

/*  */
/* Sidebar */
/*  */

html #sidebar {
text-wrap: pretty;
}
html #sidebar li {
  transition: 0.15s;
}

html.dark #sidebar .dark\:text-gray-400 p {
  color: rgb(159, 158, 160);
}


/* Links */
:is(.dark .prose a) {
    color: white;
}

:is(.dark .dark\:decoration-gray-500) {
  text-decoration-color: inherit;
}

/* Per Design Light Highlight */
/* html:not(.dark) #sidebar a.bg-primary\/10.text-primary {
  background: #2d0f37 !important;
  color: white !important;
} */



/*  */
/* Unordered List */
/*  */

.prose :where(ul > li):not(:where([class~="not-prose"] *)):before {
  content: "•";
    width: 3px;
    height: auto;
    position: relative;
    top: 0;
    line-height: 100%;
    left: -20px;
    margin-right: -12px;
    background-color: transparent;
}

/*  */
/* Cards */
/*  */

.card,
.card * {
  transition-duration: 150ms;
}

.card div.h-6.w-6 {
  width: auto;
  height: auto;
}

.dark .card:not(.card-variation) {
  background: rgb(20, 23, 23);
  border: none;
}

.dark .card:not(.card-variation):hover {
  background-color: #2d2e2f;
}

.card:not(.card-variation):not(.sdk-card) > div {
  /* background-color: brown !important; */
  padding: 1.5rem;
}

.card:not(.card-variation) p {
  /* border: 1px solid red; */
  margin-top: 1rem;
}

.card.shadow-md {
  box-shadow: unset;
}

/* Card variation */

.card-variation .card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.card-variation.background-color-yellow:hover .card-header > h2 {
  color: #ffd260;
  /* transition:  .1s ease-in-out */ /*  For smooth transition to other colors */
}

.card-variation.background-color-lavander:hover .card-header > h2 {
  color: #b7b2ff;
}

.card-variation .card-header > h2 {
  font-size: 1.5rem;
}

.card-variation .card-body {
  margin-top: 76px;
}

.card-variation .card-body p {
  line-height: 24px;
}

.card-variation.background-color-yellow:hover .card-body p {
  color: #ffd260;
  /* transition:  .1s ease-in-out */ /*  For smooth transition to other colors */
}

.card-variation.background-color-lavander:hover .card-body p {
  color: #b7b2ff;
}

/* Home page SDK card divs */
.sdk-card {
  background-color: #f5f3f5;
  padding-top: 1.5rem;
}

.dark .sdk-card p {
  color: #dfdee0;
}

/* Tables CSS */
table {
  border: none;
  /* border-radius: 12px; */
  font-size: 15px !important;
}

.prose :where(thead th):not(:where([class~=not-prose] *)) {
  color: #2d0f37;
}

.dark .prose :where(thead th):not(:where([class~=not-prose] *)) {
  color: white;
}

.header {
  /* background-color: rgb(248, 248, 248); */
  vertical-align: middle;
  text-align: left;
  /* border-right: none;
    border-left: none; */
  padding: 10px 16px;
}

.table-content {
  padding: 10px 16px;
  vertical-align: top; 
}

.table-content p {
  margin-top: 0;
}

td:first-child,
th:first-child,
.dark td:first-child,
.dark th:first-child {
  border-left: none;
}

td:last-child,
th:last-child,
.dark td:last-child,
.dark th:last-child {
  border-right: none;
}

th {
  /* border-right: 1px solid #F5F3F5;
    border-left: 1px solid #F5F3F5; */
  border-right: 1px solid #d0d3d0;
  border-left: 1px solid #d0d3d0;
  border-bottom: 1px solid #d0d3d0;
  border-collapse: collapse;
}

td {
  /* border-bottom: 1px solid #F5F3F5;
    border-right: 1px solid #F5F3F5; */
  border-bottom: 1px solid #d0d3d0;
  border-right: 1px solid #d0d3d0;
  border-left: none;
  /* border: 0 1px 1px 1px solid #d0d3d0; */ /* Cleaner CSS - use this or the separate three */
  border-collapse: collapse;
}

.dark td {
  border-bottom: 1px solid #4e5251;
  border-right: 1px solid #4e5251;
  border-left: none;
}

.dark th {
  border-bottom: 1px solid #4e5251;
  border-right: 1px solid #4e5251;
  /* border-right: 1px solid #88908e; */
}

/* .dark .header-column .header {
    border-bottom:1px solid #4e5251;
} */

.header-column .header {
  vertical-align: top;
}

/* Currencies Table */

.currenciesTable {
  max-height: 720px;
  border-collapse: separate;
  border-spacing: 0;
  /* border: 1px solid #d0d3d0; */
}

.currenciesTable td {
  border-bottom: 1px solid #d0d3d0;
  border-right: 1px solid #d0d3d0;
  border-left: none;
  border-collapse: collapse;
}

.dark .currenciesTable td {
  border-bottom: 1px solid #4e5251;
  border-right: 1px solid #4e5251;
}

.currenciesTable .header {
  border: 1px solid #d0d3d0;
  border-top: none;
  border-left: none;
  background-color: #f3f5f3 !important;
}

.dark .currenciesTable .header {
  border: 1px solid #4e5251;
  border-top: none;
  border-left: none;
  background-color: #171919 !important;
}

/* Freeze first column  */
.currenciesTable thead tr:first-child th:first-child,
.currenciesTable tbody th:first-child {
  position: sticky;
  left: 0;
  z-index: 1;
}

/* .currenciesTable thead tr:last-child th:last-child,
.currenciesTable tbody th:last-child, {
    border-right: none;
} */

/* .currenciesTable thead tr:last-child th:last-child,
.currenciesTable tbody th:last-child,
.currenciesTable td:last-child, 
.currenciesTable th:last-child, 
.currenciesTable .dark thead tr:last-child th:last-child,
.currenciesTable .dark tbody th:last-child,
.currenciesTable .dark td:last-child, 
.currenciesTable .dark th:last-child {
    border-right: none; 
}  */
/* ... */

